--- a/includes/style.css
+++ b/includes/style.css
@@ -146,6 +146,7 @@ header,main,footer,aside,nav,article,section{
 
     /*Main Page Slide Photo*/
     #slideshow {
+        position: relative;
         margin-top: 15px;
         height: 269px;
         width: 100%;
@@ -214,7 +215,7 @@ header,main,footer,aside,nav,article,section{
 
     ul.triggers {
         position: absolute;
-        top: 225px;
+        bottom: 0px;
         left: 80px;
         list-style-type: none;
     }
