--- a/includes/style.css
+++ b/includes/style.css
@@ -193,7 +193,7 @@ header,main,footer,aside,nav,article,section{
 
     .mask {
         float: left;
-        width: 341px;
+        width: 65.5%;
         overflow: hidden;
     }
 
