--- a/includes/style.css
+++ b/includes/style.css
@@ -13,7 +13,7 @@
 header,main,footer,aside,nav,article,section{
     display: block;
 }
-@media all and (max-width: 320px), (min-width:321px)and(max-width: 640px){
+@media all and (max-width: 640px){
 
     .clear {
         clear: both;
