--- a/includes/style.css
+++ b/includes/style.css
@@ -217,6 +217,7 @@ header,main,footer,aside,nav,article,section{
         position: absolute;
         bottom: 0px;
         left: 13%;
+        width:43%;
         list-style-type: none;
     }
 
@@ -227,7 +228,7 @@ header,main,footer,aside,nav,article,section{
         font: bold 2.333em arial;
         cursor: pointer;
         color: #DBDBDB;
-        padding: 10px;
+        padding:1%;
 
     }
 
@@ -256,12 +257,15 @@ header,main,footer,aside,nav,article,section{
 
     #youtube {
         padding: 1px 0 0 1px;
-        height: 186px;
+        width: 100%;
+        height: 50%;
         margin-top: 16px;
     }
 
     #articleBigPic {
         direction: rtl;
+        width: 100%;
+        height: 50%;
         margin-top: 16px;
         margin-left: 14px;
         border: 2px solid #87746a;
@@ -302,11 +306,11 @@ header,main,footer,aside,nav,article,section{
     .articleLink {
         font-family: ariel, Verdana, sans-serif;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 1em;
         color: #87746a;
         padding-left: 15px;
         padding-bottom: 14px;
-        margin-right: 198px;
+        margin-right: 55%;
     }
 
     .articleLink a:link, .articleLink a:visited {
@@ -336,31 +340,31 @@ header,main,footer,aside,nav,article,section{
     .systemArticleCotert {
         direction: rtl;
         font-family: ariel, Verdana, sans-serif;
-        font-size: 12px;
+        font-size: 1em;
         font-weight: bold;
         color: #87746a;
-        margin-top: -100px;
-        padding-left: 25px;
-        margin-right: 133px;
+        margin-top: -33%;
+        margin-right: 50%;
 
     }
 
     .systemArticleDate {
         direction: rtl;
         font-family: ariel, Verdana, sans-serif;
-        font-size: 10px;
+        font-size: 0.833em;
         color: #00b25a;
-        margin-right: 133px;
-        padding-bottom: 10px;
+        margin-right: 50%;
+        padding-bottom: 15%;
     }
 
     .systemArticleText {
         direction: rtl;
         font-family: ariel, Verdana, sans-serif;
-        font-size: 12px;
+        font-size: 1em;
         color: #87746a;
-        margin-right: 133px;
-        padding-bottom: 15px;
+        margin-right: 10%;
+        margin-top: 15%;
+        padding-bottom: 10%;
     }
 
     #endArticle {
