--- a/includes/style.css
+++ b/includes/style.css
@@ -101,7 +101,7 @@ header,main,footer,aside,nav,article,section{
     /*-------------------------------------------*/
 
     /*****          Top Nav style           *****/
-    #topNav {
+    .topNav {
         direction: rtl;
         border-top: 1px dotted #c3b9b4;
         font-family: ariel, Verdana, sans-serif;
@@ -109,26 +109,26 @@ header,main,footer,aside,nav,article,section{
         font-size: 1.083em;
     }
 
-    #topNav a:link, #topNav a:visited {
+    .topNav a:link, #topNav a:visited {
         color: #87746a;
         text-decoration: none;
     }
 
-    #topNav a:hover {
+    .topNav a:hover {
         color: #1fb25a;
     }
 
-    #topNav a:active {
+    .topNav a:active {
         color: #42ca44;
     }
 
-    #topNav ul {
+    .topNav ul {
         list-style-type: none;
         margin-top: 13px;
 
     }
 
-    #topNav ul li {
+    .topNav ul li {
         padding: 3px 6px 3px 6px;
         float: left;
         border-left: 1px dotted #c3b9b4;
@@ -137,6 +137,45 @@ header,main,footer,aside,nav,article,section{
     #orangeLi {
         color: #ffae3b !important;
     }
+
+    .clearfix:after {
+        display:block;
+        clear:both;
+    }
+
+    .topNav li:hover .sub-menu {
+        z-index:1;
+        opacity:1;
+    }
+
+    .sub-menu {
+        width:160%;
+        padding:5px 0px;
+        position:absolute;
+        top:100%;
+        left:0px;
+        z-index:-1;
+        opacity:0;
+        transition:opacity linear 0.15s;
+        box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+        background:#2e2728;
+    }
+
+    .sub-menu li {
+        display:block;
+        font-size:16px;
+    }
+
+    .sub-menu li a {
+        padding:10px 30px;
+        display:block;
+    }
+
+    .sub-menu li a:hover, .sub-menu .current-item a {
+        background:#3e3436;
+    }
+
+
 
 #tickerText{
     display: none;
