--- a/includes/style.css
+++ b/includes/style.css
@@ -174,7 +174,9 @@ header,main,footer,aside,nav,article,section{
     .sub-menu li a:hover, .sub-menu .current-item a {
         background:#3e3436;
     }
-
+    #topNav{
+        display:none;
+    }
 
 
 #tickerText{
