--- a/includes/style.css
+++ b/includes/style.css
@@ -161,23 +161,24 @@ header,main,footer,aside,nav,article,section{
         z-index:1;
         opacity:1;
     }
-
+    #openSmenu{
+        margin:0 10px 0 10px;
+    }
     .sub-menu {
-        width:160%;
-        padding:5px 0px;
-        position:absolute;
-        top:100%;
-        left:0px;
-        z-index:-1;
-        opacity:0;
-        transition:opacity linear 0.15s;
-        box-shadow:0px 2px 3px rgba(0,0,0,0.2);
-        background:#2e2728;
+        width: 160%;
+        padding: 5px 0px;
+        position: absolute;
+        top: 35%;
+        left: 0px;
+        z-index: -1;
+        opacity: 0;
+        transition: opacity linear 0.15s;
+        background: #ffffff;
     }
 
     .sub-menu li {
         display:block;
-        font-size:16px;
+        font-size:1em;
     }
 
     .sub-menu li a {
