--- a/includes/style.css
+++ b/includes/style.css
@@ -101,6 +101,9 @@ header,main,footer,aside,nav,article,section{
     /*-------------------------------------------*/
 
     /*****          Top Nav style           *****/
+    #cssmenu{
+        
+    }
     .topNav {
         direction: rtl;
         border-top: 1px dotted #c3b9b4;
