--- a/includes/style.css
+++ b/includes/style.css
@@ -102,7 +102,7 @@ header,main,footer,aside,nav,article,section{
 
     /*****          Top Nav style           *****/
     #cssmenu{
-        
+
     }
     .topNav {
         direction: rtl;
@@ -432,7 +432,7 @@ header,main,footer,aside,nav,article,section{
 
     #endArticle {
         margin-right: 1px;
-        width: 307px;
+        width: 100%;
         border-bottom: 2px solid #e7e3e1;
     }
 
