--- a/includes/style.css
+++ b/includes/style.css
@@ -509,6 +509,10 @@ footer {
     padding-right: 8px;
     padding-left: 8px;
 }
+
+#footerTheMarkerLogo{
+    display: none;
+}
 /****************************************************/
 
 }
