--- a/includes/style.css
+++ b/includes/style.css
@@ -510,7 +510,7 @@ footer {
     padding-left: 8px;
 }
 
-#footerTheMarkerLogo{
+.footerTheMarkerLogo{
     display: none;
 }
 /****************************************************/
