--- a/includes/style.css
+++ b/includes/style.css
@@ -2025,7 +2025,7 @@ footer {
         font-weight: bold;
     }
 
-    #picsSliderBigImg {
+    .picsSliderBigImg {
         margin-top: 10px;
     }
 
