--- a/includes/style.css
+++ b/includes/style.css
@@ -1226,7 +1226,14 @@ footer {
         height: 265px;
         overflow: hidden;
     }
-
+    .maskRecipe {
+        float: left;
+        width:496px;
+        overflow: hidden;
+    }
+    .imagesRecipe img {
+        width:496px;
+    }
     .images img {
         width: 341px;
     }
