--- a/includes/style.css
+++ b/includes/style.css
@@ -1242,7 +1242,7 @@ footer {
 
     ul.images,ul.imagesRecipe {
         list-style-type: none;
-        position: relative;x
+        position: relative;
         top: 0px;
         left: 0px;
     }
