--- a/includes/style.css
+++ b/includes/style.css
@@ -334,10 +334,10 @@ header,main,footer,aside,nav,article,section{
         cursor:pointer;
     }
     .prev {
-
+        cursor:pointer;
     }
     .next {
-
+        cursor:pointer;
     }
     /*-------------------------------------------*/
 /************************ article style *************************/
