--- a/includes/style.css
+++ b/includes/style.css
@@ -1818,9 +1818,8 @@ footer {
     }
 
     #fiencookArticle h1 {
-        position: absolute;
-        top: 12px;
-        right: 15px;
+        margin-top: 12px;
+        margin-right: 15px;
         direction: rtl;
         font-size: 19px;
         font-weight: bold;
@@ -1829,11 +1828,8 @@ footer {
     }
 
     #fiencookArticleFirstSection {
-        width: 496px;
-        height: 54px;
-        position: absolute;
-        top: 42px;
-        right: 15px;
+        margin-top: 10px;
+        margin-right: 14px;
         direction: rtl;
         font-size: 12.5px;
         font-weight: bold;
@@ -1885,11 +1881,9 @@ footer {
     }
 
     #fiencookArticlePara {
-        position: absolute;
-        height: 238px;
         width: 495px;
-        top: 472px;
-        left: 35px;
+        margin-top: 394px;
+        margin-left: 35px;
     }
 
     #fiencookArticlePara p {
