--- a/includes/style.css
+++ b/includes/style.css
@@ -1803,7 +1803,7 @@ footer {
         font-weight: bold;
     }
 
-    #orange {
+    .orange {
         color: #f26631;
         text-decoration: none;
     }
