--- a/includes/style.css
+++ b/includes/style.css
@@ -1867,7 +1867,7 @@ footer {
     /*********************************************************************************/
     /*****      Fien Cook Page    ********/
     #greenBoldFienCook {
-        color: #1fb25a !important;
+        color: #1fb25a;
     }
 
     #fiencookArticle {
