--- a/includes/style.css
+++ b/includes/style.css
@@ -2209,11 +2209,7 @@ footer {
         color: #87746a;
         font-size: 12px;
         font-family: ariel, Verdana, sans-serif;
-        margin-left: 21px;
-    }
-
-    #sendRecipesUlLiLastChild {
-        margin-left: 3px !important;
+        margin: 0 10px 0 10px;
     }
 
     #sendRecipes ul img {
