--- a/includes/style.css
+++ b/includes/style.css
@@ -104,10 +104,9 @@ header,main,footer,aside,nav,article,section{
         direction: rtl;
         position: absolute;
         right: 10%;
-        border:none;
     }
-    #appMenuImg{
-
+    #appMenuBorderNone{
+        border:none;
     }
     #appMenuWidth{
         width:120px;
