--- a/includes/style.css
+++ b/includes/style.css
@@ -1375,6 +1375,7 @@ footer {
         width:503px;
         height: 324px;
         overflow: hidden;
+        margin-left: 39px;
     }
     .imagesFienHome img {
         width:503px;
