--- a/includes/style.css
+++ b/includes/style.css
@@ -1305,13 +1305,15 @@ footer {
         height: 265px;
         overflow: hidden;
     }
+    .sliderPosition{
+        margin: -15px 0 10px 35px;
+    }
     .maskRecipe {
         direction: ltr;
         float: left;
         height: 324px;
         width:496px;
         overflow: hidden;
-        margin: -15px 0 10px 35px;
     }
     .imagesRecipe img {
         width:496px;
