--- a/includes/style.css
+++ b/includes/style.css
@@ -103,7 +103,7 @@ header,main,footer,aside,nav,article,section{
     #marqueeDisplay{
         background-color: #00b25a;
         height: 22px;
-        width: 534px;
+        width: 100%;
         overflow:hidden;
         position:relative;
     }
@@ -626,6 +626,9 @@ footer {
 
 }
 
+
+
+
 @media all and (min-width: 641px)
 {
 
@@ -746,7 +749,29 @@ footer {
     #orangeLi {
         color: #ffae3b;
     }
+    /*******************************************************************/
+    /*marquee style*/
 
+    #marqueeDisplay{
+        background-color: #00b25a;
+        height: 22px;
+        width: 534px;
+        overflow:hidden;
+        position:relative;
+    }
+    #marqueeText{
+        direction: rtl;
+        position: absolute;
+        background-color: #00b25a;
+        font-family: ariel, Verdana, sans-serif;
+        color: #ffffff;
+        padding-top: 2px;
+        text-align: center;
+        font-size: 13px;
+    }
+
+
+    /*-------------------------------------------*/
     /*-------------------------------------------*/
     /*****          Nav of main style           *****/
     .mainNav {
