--- a/includes/style.css
+++ b/includes/style.css
@@ -2305,9 +2305,8 @@ footer {
     }
 
     #articleContentStyle1Img {
-        position: absolute;
-        top: 20px;
-        right: 6px;
+        margin-top: 20px;
+        margin-right: 6px;
     }
 
     #articleContentStyle2 {
@@ -2329,9 +2328,8 @@ footer {
     }
 
     #articleContentStyle2Img {
-        position: absolute;
-        right: 6px;
-        top: 10px;
+        margin-top: 18px;
+        margin-right: 6px;
     }
 
     #articleContentStyle3 {
@@ -2349,7 +2347,7 @@ footer {
     #articleContentStyle3 p {
         position: absolute;
         right: 125px;
-        top: 10px;
+        top: 16px;
         direction: rtl;
         font-family: ariel, Verdana, sans-serif;
         font-size: 12px;
@@ -2358,9 +2356,8 @@ footer {
     }
 
     #articleContentStyle3Img {
-        position: absolute;
-        right: 6px;
-        top: 2px;
+        margin-right: 6px;
+        margin-top: 19px;
     }
 
     .pGreen {
